<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">VRRDL</string>
    <string name="menu_settings">Settings</string>
    
    <string name="debris_status">Debris status message</string>
    <string name="set_debris">Report Debris</string>
    <string name="clear_markers">Reset Debris</string>
    <string name="test_tap">Tap to Add</string>
	<string name="test_journey">Test Journey</string>
	<string name="compass_debris">Debris location</string>
	<string name="debris_list">List of Debris</string>
	<string name="webaddress_list">Web Service Address</string>
	<string name="httpbin">httpbin.org/put</string>
	<string name="custom">custom</string>
	<string name="save_selection">Save</string>
	<string name="custom_web_address">Enter custom web address</string>
	<string name="close">Close</string>
	
    
</resources>