<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:clipToPadding="false"
    android:orientation="vertical" >

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent" >

        <fragment
            android:id="@+id/map"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            class="com.google.android.gms.maps.SupportMapFragment" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom"
            android:background="#88000000"
            android:orientation="vertical"
            android:padding="10dp"
            android:paddingBottom="20dp" >

            <Button
                android:id="@+id/set_debris"
                style="@style/btnStylePaprika"
                android:layout_width="199dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:alpha="0.9"
                android:onClick="onSetDebrisClicked"
                android:text="@string/set_debris"
                android:textStyle="normal"
                android:typeface="normal" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="top"
            android:orientation="vertical" >

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="61dp"
                android:layout_margin="0dp"
                android:layout_marginBottom="0dp"
                android:layout_marginLeft="0dp"
                android:layout_marginRight="0dp"
                android:layout_marginTop="0dp"
                android:layout_weight="1"
                android:background="#88000000"
                android:padding="0dp"
                android:showDividers="beginning|middle|end" >

                <CheckBox
                    android:id="@+id/testJourney"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:onClick="onTestJourneyToggle"
                    android:text="@string/test_journey" />

                <CheckBox
                    android:id="@+id/checkBox2"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:checked="true"
                    android:onClick="onTestMapClickToggle"
                    android:text="@string/test_tap" />

                <CheckBox
                    android:id="@+id/checkBox3"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:onClick="onClearDebrisToggle"
                    android:text="@string/clear_markers" />
            </LinearLayout>

            <View
                android:layout_width="match_parent"
                android:layout_height="2dp"
                android:layout_weight="1"
                android:background="#FF000000" >
            </View>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="55dp" >

                <View
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1" />

                <Button
                    android:id="@+id/button1"
                    android:layout_width="41dp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="bottom"
                    android:layout_weight="0"
                    android:alpha="0.9"
                    android:background="@drawable/mylocation_button"
                    android:onClick="onMyLocationButtonClick"
                    android:padding="10dp"
                    android:paddingRight="20dp"
                    android:paddingTop="20dp" />

                <View
                    android:layout_width="15dp"
                    android:layout_height="wrap_content" />

            </LinearLayout>
        </LinearLayout>

    </FrameLayout>

</LinearLayout>